--- a/phuong-linh's-portfolio/package.json
+++ b/phuong-linh's-portfolio/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/p5": "^1.7.6",
+    "p5": "^2.0.5",
     "react": "^19.1.1",
     "react-dom": "^19.1.1"
   },
