--- a/phuong-linh's-portfolio/package.json
+++ b/phuong-linh's-portfolio/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@types/p5": "^1.7.6",
+    "framer-motion": "^12.23.22",
     "p5": "^2.0.5",
     "react": "^19.1.1",
-    "react-dom": "^19.1.1"
+    "react-dom": "^19.1.1",
+    "tone": "^15.1.22"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
